--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet"/>
 
     <link rel="stylesheet" href="styles.css">
-    <title>Styled Card</title>
+    <title>MLSA X GDG PARTICIPANTS ROCKS</title>
 </head>
 <body>
     <main>
