--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
             <h2> Aryan Rai</h2>
             <div class="part2">    
-                <a href="#">About</a>
-                <a href="#">Projects</a>
+                <a href="#">RISHABH</a>
+                <a href="#">NIKHIL</a>
                 <a href="#">Services</a>
                 <a href="#">Workflow</a>
             </div>
